--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,26 +1,24 @@
 *{
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+}
+
+body{
+    background-color: #f6f8fc;
 }
 
 .content{
     padding: 1rem;
+    background-color: white;
+    height: 100vh;
+    width: 100vw;
 }
 
-.content h1{
-    margin: 0;
-}
-
-ol.pokemons{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    list-style: none;
-    padding 0;
-    margin 0;
-}
-
-ol.pokemons li{
-    margin: .5rem;
-    padding: 1rem;
-    background-color: #14A06F;
-    border-radius: 1rem;
-}
+@media screen and (min-width: 992px) {
+    .content {
+        max-width: 992px;
+        height: auto;
+        margin: 1rem auto;
+        border-radius: 1rem;
+    }
+  }
